--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
    <h1>Hello World</h1>
    <h2>This is a subheading</h2>
+   <p>And this is a paragraph since i keep forgetting to stage changes and vscode (rightfully) keeps scolding me.</p>
 </body>
 </html>
